# lambda-rust-sample

./: Cargo.toml  Dockerfile  Dockerfile.devel  README.md  template.yaml
.github/workflows/: ci.yml
src/: main.rs
