[package]
name = "lambda-rust-sample"
version = "0.1.0"
authors = ["INAJIMA Daisuke <inajima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4"
serde_json = "1.0"
tokio = "1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
